# hello-grpc

./: .editorconfig  Cargo.toml  README.md  _typos.toml  build.rs  deny.toml
.github/workflows/: rust.yml
proto/auth/v1/: auth.proto
src/: grpc.rs  lib.rs  protobuf.rs
