[package]
name = "hello_grpc"
version = "0.1.0"
edition = "2021"

authors = ["photowey <photowey@gmail.com>"]
license = "Apache-2.0"

description = """
An example gRPC(tonic) project in Rust.
"""

[dependencies]
tonic = "0.12"
prost = "0.13"
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }

[build-dependencies]
#prost-build = "0.13"
tonic-build = "0.12"

# ----------------------------------------------------------------

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "client"
path = "src/bin/client.rs"
